k8s/shipanaro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipanaro
  labels:
    system: pirates
spec:
  replicas: 1
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app: shipanaro
  template:
    metadata:
      labels:
        app: shipanaro
    spec:
      restartPolicy: Always
      containers:
        - name: shipanaro
          # TODO: use versioning and IfNotPresent
          image: piratescat/shipanaro:latest
          # imagePullPolicy: IfNotPresent
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
              memory: 400Mi
            limits:
              cpu: 500m
              memory: 1000Mi
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 3
