k8s/ldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldap
  name: openldap
spec:
  ports:
    - name: "389"
      port: 389
      targetPort: 389
    - name: "636"
      port: 636
      targetPort: 636
  selector:
    app: ldap
