k8s/ldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ldapadmin
  name: ldapadmin
spec:
  ports:
    - name: "https"
      port: 9876
      targetPort: 443
  selector:
    app: ldapadmin
