k8s/shipanaro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipanaro
spec:
  selector:
    app: shipanaro
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
