k8s/shipanaro-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shipanaro
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: pirates.humansascode.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shipanaro
                port:
                  name: http
  tls:
    - hosts:
        - pirates.humansascode.com
      secretName: pirates-humansascode-com-cert
